Fix app link wrapping

--- a/democracy/page/default_wahlometer/css/default_wahlometer.css
+++ b/democracy/page/default_wahlometer/css/default_wahlometer.css
@@ -503,6 +503,7 @@
 
 #secondbadge-wom {
   margin-bottom: 10vh;
+  min-width: max-content;
 }
 
 #wom-about {
